tests/snapshots/snapshots__pipeline@errors_undeclared.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/errors_undeclared.pr
---
== tokens ==
VOpen Fn Ident("main") LParen RParen Eq Ident("println") LParen Try Int(IntLit { value: 1, suffix: None }) Catch LBrace UIdent("Malformed") LParen Ident("m") RParen FatArrow Int(IntLit { value: 2, suffix: None }) RBrace RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 12..19,
                    },
                    [
                        Spanned {
                            node: Sugar(
                                TryCatch(
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 1,
                                                suffix: None,
                                            },
                                        ),
                                        span: 24..25,
                                    },
                                    [
                                        CatchArm {
                                            name: "Malformed",
                                            binders: [
                                                "m",
                                            ],
                                            body: Spanned {
                                                node: Int(
                                                    IntLit {
                                                        value: 2,
                                                        suffix: None,
                                                    },
                                                ),
                                                span: 50..51,
                                            },
                                            span: 34..51,
                                        },
                                    ],
                                ),
                            ),
                            span: 20..53,
                        },
                    ],
                ),
                span: 12..54,
            },
            wheres: [],
            span: 0..54,
        },
    ],
}

== types ==
[E6049] Type Error: `Malformed` is not a declared error
   ╭─[ <source>:1:35 ]
   │
 1 │ fn main() = println(try 1 catch { Malformed(m) => 2 })
   │                                   ────────┬────────  
   │                                           ╰────────── `Malformed` is not a declared error
───╯
